--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      packages: write
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -45,3 +47,7 @@ jobs:
 
       - name: Pack
         run: dotnet pack Todo.Core -c Release --output nupkgs
+
+      - name: Publish to GitHub Packages
+        if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/Feat-add_new_management_features'
+        run: dotnet nuget push nupkgs/*.nupkg --api-key ${{ secrets.GITHUB_TOKEN }} --source "https://github.com/EgorSborschikov/index.json"
