--- a/Todo.Core/Todo.Core.csproj
+++ b/Todo.Core/Todo.Core.csproj
@@ -5,6 +5,13 @@
     <ImplicitUsings>enable</ImplicitUsings>
 	<OutputType>Library</OutputType>
     <Nullable>enable</Nullable>
+	<PackageId>Todo.Core</PackageId>
+	<Version>1.0.0</Version>
+	<Authors>EgorSborschikov</Authors>
+	<Description>Библиотека для управления списком дел.</Description>
+	<PackageProjectUrl>https://github.com/EgorSborschikov/Code-analyze-test</PackageProjectUrl>
+  	<RepositoryUrl>https://github.com/EgorSborschikov/Code-analyze-test</RepositoryUrl>
+	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	<GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
