--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -53,4 +53,4 @@ jobs:
 
       - name: Publish to GitHub Packages
         if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/Feat-add_new_management_features'
-        run: dotnet nuget push nupkgs/*.nupkg --api-key ${{ secrets.GITHUB_TOKEN }} --source "https://nuget.pkg.github.com/EgorSborschikov/index.json"
+        run: dotnet nuget push "nupkgs/*.nupkg" --api-key "${{ secrets.GITHUB_TOKEN }}" --source "https://nuget.pkg.github.com/EgorSborschikov/index.json"
