--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,4 +35,4 @@ jobs:
         run: ls -la ./artifacts || true
 
       - name: Push package to GitHub Packages (NuGet)
-        run: dotnet nuget push ./artifacts/*.nupkg --source "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json" --api-key ${{ secrets.GITHUB_TOKEN }} --skip-duplicate
+        run: dotnet nuget push ./artifacts/*.nupkg --source "https://nuget.pkg.github.com/EgorSborschikov/index.json" --api-key "${{ secrets.GITHUB_TOKEN }}"
